# gymsim

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/agents/: access-control-engineer.md  behavioral-statistician.md  data-engineer.md  gym-business-analyst.md  gym-data-scientist.md  software-architect.md
.claude/skills/data-quality-and-noise/: SKILL.md
.claude/skills/gym-business-questions/: SKILL.md
.claude/skills/run-gym-simulation/: SKILL.md
.github/workflows/: fill-db.yml
configs/: gym.yaml
docs/: 00-vision-y-preguntas.md  01-modelo-de-datos.md  02-arquitectura.md  03-modelo-comportamental.md
scripts/: build_dashboard.py
sql/transforms/: 10_staging_dedup.sql  20_fact_access_event.sql  30_fact_session.sql
src/gymsim/: __init__.py  cli.py  config.py  live.py  ports.py  transform.py
src/gymsim/db/: __init__.py  models.py
src/gymsim/domain/: __init__.py  archetypes.py  calendar.py  events.py  member.py
src/gymsim/simulation/: __init__.py  behavior.py  engine.py  noise.py  population.py  windowed.py
src/gymsim/sinks/: __init__.py  jsonl.py  memory.py  postgres.py
tests/: test_simulation.py  test_transform.py  test_windowed.py
