[project]
name = "gymsim"
version = "0.1.0"
description = "Simulador realista de afluencia de gimnasio (eventos de control de acceso) para analítica batch y streaming"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "holidays>=0.45",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[project.scripts]
gymsim = "gymsim.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
